# berlin-estate-airflow-kafka

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
dags/: berlin_estate_etl.py
data/: berlin_properties_v1.0.csv
data/raw/: berlin_properties.csv
scripts/: generate_test_data.py  run_local_validation.py
soda/: checks.yml  configuration.yml
tests/: __init__.py  conftest.py  test_row_validators.py
