[project]
name = "berlin-estate-etl"
version = "0.1.0"
description = "Berlin real estate ETL pipeline with row-level validation and Soda governance"
requires-python = ">=3.11,<3.13"
dependencies = [
    "apache-airflow>=2.8.0",
    "soda-core>=3.0.0",
    "soda-core-postgres>=3.0.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=. --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning:opentelemetry.*",
]